--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body{
     background-image: linear-gradient(to right, rgb(197, 193, 193), white, rgb(197, 193, 193) );
-}
-main{
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+}
+main{
+    width: 100%;
     margin-top: 100px;
     display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
-
 }
 #photo{
     width: 800px;
@@ -35,7 +36,7 @@ aside{
     width: 800px;
     height: 120px;
     top: 413px;
-    left: 63px;
+    left: auto;
     opacity: 0.7;
 }
 h1{
