--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ p{
     width: 800px;
     margin-left: auto;
     margin-right: auto;
+    opacity: 0.8;
 }
 .thumbnail{
     display: block;
@@ -64,6 +65,8 @@ p{
     margin-top: 10px;
     margin-right: 5px;
     width: 90px;
+    opacity: 0.8;
+    
 }
 .title{
     display: none;
@@ -74,6 +77,8 @@ p{
     padding: 5px;
     top: -50px;
 }
-.thumbnail:hover .title{
-    display: block;
+.thumbnail:hover{
+    opacity: 1;
+    width: 110px;
+    box-shadow: 10px, rgb(43, 42, 42);
 }
